--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,40 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="782"
+    android:viewportHeight="887">
+  <group android:scaleX="0.4848929"
+      android:scaleY="0.55"
+      android:translateX="201.40688"
+      android:translateY="199.575">
+    <group>
+      <clip-path
+          android:pathData="M0,0h782v887h-782z"/>
+      <path
+          android:pathData="M106.26,0H620.95C682.84,0 733.02,50.15 733.02,112.02V774.98C733.02,836.85 682.84,887 620.95,887H106.26V0Z"
+          android:fillColor="#2AC6F5"/>
+      <group>
+        <clip-path
+            android:pathData="M597.71,181.71H241.57V706.11H597.71V181.71Z"/>
+        <path
+            android:pathData="M478.74,231.27H564.76L597.71,181.71H274.52L241.57,231.27H297.65C354.43,231.27 406.83,235.64 427.82,283.19H274.77L241.84,332.73H434C434,368.38 404.48,423.01 306.82,423.01H259.65V469.33L449.01,706.11H533.31L337.39,461.39C418.02,457.02 493.68,411.91 504.58,332.81H564.76L597.71,283.27H503.72C500.17,264.02 491.55,246.07 478.74,231.27Z"
+            android:fillColor="#F5FFFF"/>
+      </group>
+      <path
+          android:pathData="M0,106.21C0,47.55 47.57,0 106.26,0V887C47.57,887 0,839.45 0,780.79V106.21Z"
+          android:fillColor="#228DF9"/>
+      <path
+          android:pathData="M238.46,0H130.54V199.97L184.29,157.24L238.46,199.97V0Z"
+          android:fillColor="#FFCC00"/>
+      <path
+          android:pathData="M733.02,181.71H745.47C765.65,181.71 782,198.06 782,218.22C782,238.39 765.65,254.73 745.47,254.73H733.02V181.71Z"
+          android:fillColor="#FFA722"/>
+      <path
+          android:pathData="M733.02,254.73H745.47C765.65,254.73 782,271.08 782,291.24C782,311.4 765.65,327.75 745.47,327.75H733.02V254.73Z"
+          android:fillColor="#D9D9D9"/>
+      <path
+          android:pathData="M733.02,327.75H745.47C765.65,327.75 782,344.1 782,364.26C782,384.42 765.65,400.77 745.47,400.77H733.02V327.75Z"
+          android:fillColor="#76FF50"/>
+    </group>
+  </group>
 </vector>
