--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<paths xmlns:android="http://schemas.android.com/apk/res/android">
+<paths>
     <cache-path name="shared_images" path="shared_images/" />
     <cache-path name="whatsapp_reminders" path="whatsapp_reminders/" />
 </paths>
